--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,19 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+  text-align: center;
+}
+
+.container{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.img-container{
+  text-align: center;
+  flex-basis: 200px;
 }
 
 /* do not edit this footer */
