--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,6 +9,10 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr; 
+  gap: 15px;
 }
 
 .container div {
@@ -22,10 +26,14 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column-start: 1; 
+  grid-column-end: 3;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1;
+  grid-row: 2 / 4;
 }
 
 .nav {
@@ -34,10 +42,12 @@ html {
 
 .article {
   background-color: #7E1DC3;
+  grid-row: 3 / 4;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1 / -1;
 }
 
 .article p {
