--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -1,10 +1,15 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  /* grid-template-rows: repeat(auto-fill, minmax(100px, 1fr)) ; */
+  gap: 5px;
 }
 
 .container div {
@@ -17,15 +22,33 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  align-items: center;
+}
+.logo{
+  justify-self: start;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  justify-content: center;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-area: 2 / 1 / 5 / 2;
+  display: grid;
+  gap: 40px 10px;
+}
+.sidebar div{
+  display: grid;
+  align-items: center;
 }
 
 .sidebar .photo {
@@ -82,6 +105,7 @@
 }
 
 .footer {
+
   background-color: #393f4d;
 }
 
