--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -8,8 +8,7 @@
   text-align: center;
   display: grid;
   grid-template-columns: 1fr 4fr;
-  /* grid-template-rows: repeat(auto-fill, minmax(100px, 1fr)) ; */
-  gap: 5px;
+  gap: 4px;
 }
 
 .container div {
@@ -30,21 +29,23 @@
 .logo{
   justify-self: start;
 }
-
-.menu ul,
-.menu li {
-  font-size: 16px;
-  list-style-type: none;
+.menu ul{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   justify-content: center;
 }
 
+.menu ul,
+.menu li {
+  font-size: 16px;
+  list-style-type: none;
+}
+
 .sidebar {
   background-color: #C50208;
-  grid-area: 2 / 1 / 5 / 2;
+  grid-area: 2 / 1 / 4 / 2;
   display: grid;
-  gap: 40px 10px;
+  gap: 50px ;
 }
 .sidebar div{
   display: grid;
@@ -70,14 +71,22 @@
 .nav {
   background-color: #C50208;
 }
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style-type: none;
 }
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -91,6 +100,7 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
 }
 
 .card p {
@@ -105,7 +115,8 @@
 }
 
 .footer {
-
+  display: grid;
+  grid-column: span 2;
   background-color: #393f4d;
 }
 
